# Ass2

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  run.bat  seam_carving.cpp  test1_time_complexity.bat  test2_algorithm_comparison.bat  vcpkg.json
.github/workflows/: ci.yaml
